Add border around image in blog post

--- a/_posts/2015-11-02-whos-down.md
+++ b/_posts/2015-11-02-whos-down.md
@@ -10,7 +10,7 @@ Who's Down is another one of Google's invite-only product releases. They've been
 
 I received my invite from a fellow UT student giving them out on Facebook. Eager to try it out, I installed it and signed in with my Google account. I was then prompted to enter my invite code, as well as verify my phone number. I'm assuming that the phone number is way for Who's Down to connect you with your friends more easily. I gave Who's Down permissions to send push notifications and to access my contacts, as those seemed to be quite important for the app to function well.
 
-<img align="left" src="/images/blog/whos-down-home.png">
+<img class="bordered" align="left" src="/images/blog/whos-down-home.png" alt="">
 After all the initial set-up, which took a little longer than I expected, I was in! The app itself is fairly basic. When the app launches, you're greeted with a white screen saying "Who's Down" and a single switch. You simply flip the switch in order to be "down" to meet up with friends. This will send a push notification to all of your friends, letting them know that you are available. From there, you can see which of your other friends are also down at the moment. Tapping on their name will initiate a conversation, and you can discuss any plans that you want to make.
 
 And for the most part, that's it. You can also change what you're down to do when you flip your switch. By default, it says that you're "down to do anything", but you can change this to any text you want. Adding friends is easy, and you can even send anyone on your contacts list an invite code so that they can try it out with you.
